--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../asset/logo/logo.png">
 </head>
 <body>
-    <div>
-        <section></section>
+    <header>
+        <div class="nav-container">
+            <div class="logo-container">
+                <img src="../asset/logo/online-digital-marketing-agency-logo-social-media-brand-engagement-2AP3CKX-removebg-preview.png" width="170px" height="80px">
+            </div>
+            <div class="menu-container">
+                <ul class="item-list">
+                    <li class="item">Home</li>
+                    <li class="item">Service</li>
+                    <li class="item">About</li>
+                    <li class="item">Contact</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="full-banner">
+        <div class="banner-details">
+            <h1 class="banner-title"><span class="primary">Digital</span> Agency You <br>Can Really Upon!</h1>
+            <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque quia <br>culpa saepe debitis quasi dignissimos magni dolorem odit excepturi <br>unde laboriosam quibusdam consequatur atque autem ut labore, facere, animi minima.</p>
+            <div>
+                <button class="btn-discover">DISCOVER MORE</button>
+                <button class="btn-hire">HIRE US NOW</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
