added left services

--- a/index.html
+++ b/index.html
@@ -33,5 +33,50 @@
             </div>
         </div>
     </div>
+
+
+    <div class="Service-container">
+        <div class="left-container">
+            <button class="service-btn">SERVICE LIST</button>
+            <h1 class="service-title"><span class="primary">Services</span> We Can Help With!</h1>
+            <p class="service-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>Recusandae, facere. Cupiditate placeat optio quisquam<br> laudantiumbr doloribus asperiores natus ad nihil?</p>
+            <div class="lst">
+                <ol>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ol>
+            </div>
+            <div class="author-details">
+                <div class="author-pic">
+                    <img class="author-image" src="../asset/image/author.jpg" alt="">
+                    <h5 class="author-name">George Smith<br><small>CEO, Director</small></h5>
+                </div>
+                <div class="btn-more">
+                    <button class="btn-moreservices">MORE DETAILS</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="right-container">
+            <div class="web-graphic">
+                <div class="web-dev">
+                    <h3>Web Development</h3>
+                </div>
+                <div class="graphic-desgn">
+                    <h3>Graphic & Sketch Desiging</h3>
+                </div>
+            </div>
+
+            <div class="seo-digital">
+                <div>
+                    <h3>SEO & Content Writing</h3>
+                </div>
+                <div>
+                    <h3>Digital Market Planning</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
