--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="Service-container">
         <div class="left-container">
             <button class="service-btn">SERVICE LIST</button>
-            <h1 class="service-title"><span class="primary">Services</span> We Can Help With!</h1>
+            <h1 class="service-title"><span class="primary">Services</span> We Can Help You With!</h1>
             <p class="service-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>Recusandae, facere. Cupiditate placeat optio quisquam<br> laudantiumbr doloribus asperiores natus ad nihil?</p>
             <div class="lst">
                 <ol>
@@ -61,18 +61,22 @@
         <div class="right-container">
             <div class="web-graphic">
                 <div class="web-dev">
+                    <img class="service-logo" src="../asset/icons/coding.png" alt="">
                     <h3>Web Development</h3>
                 </div>
                 <div class="graphic-desgn">
+                    <img class="service-logo" src="../asset/icons/bar-chart.png" alt="">
                     <h3>Graphic & Sketch Desiging</h3>
                 </div>
             </div>
 
             <div class="seo-digital">
-                <div>
+                <div class="seo-content">
+                    <img class="service-logo" src="../asset/icons/startup.png" alt="">
                     <h3>SEO & Content Writing</h3>
                 </div>
-                <div>
+                <div class="digital-marketing">
+                    <img class="service-logo" src="../asset/icons/digital-marketing.png" alt="">
                     <h3>Digital Market Planning</h3>
                 </div>
             </div>
