--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </div>
 
+<!-- Service Container -->
 
     <div class="Service-container">
         <div class="left-container">
@@ -82,5 +83,108 @@
             </div>
         </div>
     </div>
+
+<!-- Appointment Section -->
+
+    <div class="appointment-section">
+        <div class="img-nbr">
+            <img class="phone-call" src="./asset/icons/phone-call.png" width="100px" height="100px">
+            <h3 class="apointment-nbr"><small>GET A FREE CONSULTATION</small><br>987 233 0000</h3>
+        </div>
+        <div>
+            <p class="apppointment-desc">
+                Vero id posuere tempus aspernatur quaerat mollis <br>voluptatum eveniet porro viverra libero habitasse <br>Aut ab nibh aliqua optio veniet porro viverr.
+            </p>
+        </div>
+        <div>
+            <button class="btn-appointment">MAKE APPOINTMENT</button>
+        </div>
+    </div>
+
+    <!-- Blog and News Section -->
+
+    
+    <div class="blog-news">
+        <div>
+            <h1 class="blog-title"><Span class="primary">Blog</Span> & News From Us!</h1>
+            <p class="blog-desc">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id natus non nisl provident justo.
+            </p>
+        </div>
+    </div>
+
+    <div class="blog-section">
+        <div class="blog-banner">
+            <img class="blog-img" src="./asset/image/blog-1.jpg">
+            <h3 class="blog-banner-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+            <p class="blog-banner-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+        </div>
+        <div class="blog-banner">
+            <img class="blog-img" src="./asset/image/blog-2.jpg">
+            <h3 class="blog-banner-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+            <p class="blog-banner-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+        </div>
+        <div class="blog-banner">
+            <img class="blog-img" src="./asset/image/blog-3.jpg">
+            <h3 class="blog-banner-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+            <p class="blog-banner-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+        </div>
+    </div>
+    <footer>
+        <div class="whole-footer">
+        <div class="footer-section">
+                <div class="left-footer">
+                    <div>
+                        <img src="./asset/logo/online-digital-marketing-agency-logo-social-media-brand-engagement-2AP3CKX-removebg-preview.png" width="170px" height="80px">
+                    </div>
+                    <div>
+                        <p class="left-desc">Auctor blandit dolorem primis eius odit<br>soluta molestie? Malesuada elementumbr<br>aut doloremque labo.</p>
+                    </div>
+                    <div>
+                        <img class="social-icon" src="./asset/icons/facebook.png">
+                        <img class="social-icon" src="./asset/icons/Instagram.png">
+                        <img class="social-icon" src="./asset/icons/twitter.png">
+                        <img class="social-icon" src="./asset/icons/youtube.png">
+                    </div>
+                </div>
+                <div class="links-supports">
+                    <h3 class="support">Useful Links</h3>
+                    <div class="desc-support">
+                        <p class="desc-support">About Us</p>
+                        <p class="desc-support">Careers</p>
+                        <p class="desc-support">News & Articles</p>
+                        <p class="desc-support">Legal Notice</p>
+                    </div>
+                </div>
+                <div class="links-supports">
+                    <h3 class="support">Supports</h3>
+                    <div>
+                        <p class="desc-support">Help Center</p>
+                        <p class="desc-support">Contat Us</p>
+                        <p class="desc-support">FAQ</p>
+                        <p class="desc-support">Parent Community</p>
+                    </div>                
+                </div>
+                <div class="links-supports">
+                    <h3 class="support">Contact Information</h3>
+                    <div class="desc-support">
+                        <p class="desc-support">Feel free to contact & reach us !!</p>
+                        <div class="add-phone-email">
+                            <img class="address-icon" src="./asset/icons/address.png" alt="">
+                            <p class="inf">3557 Derek Drive, Orlando, Florida</p>
+                        </div> 
+                        <div class="add-phone-email">
+                            <img class="address-icon" src="./asset/icons/phone-call.png" alt="">
+                            <p class="inf">+1(456)657-887</p>
+                        </div>  
+                        <div class="add-phone-email">
+                            <img class="address-icon" src="./asset/icons/email.png" alt="">
+                            <p class="inf">info@domain.com</p>
+                        </div>                     
+                    </div>
+                </div>
+        </div>
+        <p class="end">Copyright © 2022 Agence. All rights reserved.</p>
+    </div>
+    </footer>
 </body>
 </html>
