--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="nav-container">
-            <div class="logo-container">
-                <img src="./asset/logo/online-digital-marketing-agency-logo-social-media-brand-engagement-2AP3CKX-removebg-preview.png" width="170px" height="80px">
+            <div>
+                <img class="logo-container" src="./asset/logo/online-digital-marketing-agency-logo-social-media-brand-engagement-2AP3CKX-removebg-preview.png">
             </div>
             <div class="menu-container">
                 <ul class="item-list">
