--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="../asset/logo/logo.png">
+    <link rel="icon" href="./asset/logo/logo.png">
 </head>
 <body>
     <header>
@@ -47,7 +47,7 @@
             </div>
             <div class="author-details">
                 <div class="author-pic">
-                    <img class="author-image" src="../asset/image/author.jpg" alt="">
+                    <img class="author-image" src="./asset/image/author.jpg" alt="">
                     <h5 class="author-name">George Smith<br><small>CEO, Director</small></h5>
                 </div>
                 <div class="btn-more">
@@ -60,22 +60,22 @@
         <div class="right-container">
             <div class="web-graphic">
                 <div class="web-dev">
-                    <img class="service-logo" src="../asset/icons/coding.png" alt="">
+                    <img class="service-logo" src="./asset/icons/coding.png" alt="">
                     <h3>Web Development</h3>
                 </div>
                 <div class="graphic-desgn">
-                    <img class="service-logo" src="../asset/icons/bar-chart.png" alt="">
+                    <img class="service-logo" src="./asset/icons/bar-chart.png" alt="">
                     <h3>Graphic & Sketch Desiging</h3>
                 </div>
             </div>
 
             <div class="seo-digital">
                 <div class="seo-content">
-                    <img class="service-logo" src="../asset/icons/startup.png" alt="">
+                    <img class="service-logo" src="./asset/icons/startup.png" alt="">
                     <h3>SEO & Content Writing</h3>
                 </div>
                 <div class="digital-marketing">
-                    <img class="service-logo" src="../asset/icons/digital-marketing.png" alt="">
+                    <img class="service-logo" src="./asset/icons/digital-marketing.png" alt="">
                     <h3>Digital Market Planning</h3>
                 </div>
             </div>
